# Alloy

./: .dockerignore  .editorconfig  .env.example  .gitignore  README.md  compose.override.yml  compose.yml  dev.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  roadmap.txt
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_phase1_projects.py  0002_phase1_build_runs.py
apps/api/app/: __init__.py  main.py
apps/api/app/agents/: models.py  planner_agent.py  spec_agent.py
apps/api/app/agents/coder/: __init__.py  agent.py  context.py  errors.py  results.py  validator_loop.py
apps/api/app/agents/coder/tools/: __init__.py  _paths.py  codegen.py  commands.py  files.py  git.py  patch.py  review.py  search.py  validators.py
apps/api/app/agents/prompts/: coder_agent.md  planner_agent.md  spec_agent.md
apps/api/app/api/: deps.py  router.py
apps/api/app/api/routes/: build.py  files.py  generate.py  health.py  ping.py  plan.py  projects.py  sandbox.py  spec.py
apps/api/app/core/: clerk.py  config.py  db.py  llm.py  logging.py  migrations.py
apps/api/app/models/: __init__.py  project.py  user.py
apps/api/app/sandboxes/: __init__.py  compose.py  dependency.py  git_ops.py  manager.py  ports.py  runtime.py  types.py
apps/api/app/scaffold/: __init__.py  answer_builder.py  blocks.py  scaffolder.py
apps/api/app/services/: builds.py  finalise.py  projects.py  workspaces.py
apps/api/app/workers/: arq_worker.py
apps/api/scripts/: __init__.py  export_openapi.py  run_build.py  run_coder_task.py
apps/api/tests/: test_api_files.py  test_build_graph.py  test_build_topo.py  test_coder_agent.py  test_coder_tools_codegen_git_review.py  test_coder_tools_commands.py  test_coder_tools_files.py  test_coder_tools_patch.py  test_coder_tools_search_and_ast.py  test_coder_tools_validators.py  test_coder_validator_loop.py  test_health.py  test_llm_router.py  test_planner_agent.py  test_sandbox_compose.py  test_sandbox_git_ops.py  test_sandbox_manager.py  test_sandbox_ports.py  test_scaffold.py  test_services_projects.py  test_spec_agent.py
apps/web/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  openapi-ts.config.ts  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.config.ts.timestamp-1777069647424-6b95df1b1117.mjs
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/auth/: AuthProvider.tsx  identity.ts
apps/web/src/components/ide/: ChatPanel.tsx  EditorPanel.tsx  FileTree.tsx  IDELayout.tsx  PreviewPanel.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  resizable.tsx  scroll-area.tsx  tabs.tsx  tooltip.tsx
apps/web/src/hooks/: useBuildStream.ts  useEditorTabs.ts  useFileTree.ts  useSandboxPreview.ts
apps/web/src/lib/: api.ts  hey-api.ts  sandpack-gen.ts
apps/web/src/pages/: Build.tsx  Dashboard.tsx  SignIn.tsx
apps/web/src/test/: smoke.test.tsx
blocks/: README.md
blocks/auth/clerk/: block.yaml
blocks/auth/clerk/content/backend/app/core/: clerk.py
blocks/auth/clerk/content/frontend/src/auth/: ClerkProvider.tsx
blocks/auth/jwt/: block.yaml
blocks/auth/jwt/content/backend/app/api/routes/: auth.py
blocks/auth/jwt/content/backend/app/core/: jwt_auth.py
blocks/auth/jwt/content/frontend/src/auth/: JwtProvider.tsx
blocks/storage/r2/: block.yaml
blocks/storage/r2/content/backend/app/api/routes/: uploads.py
blocks/storage/r2/content/backend/app/core/: r2.py
templates/base-react-fastapi/: ALLOY.md  VERSION
templates/base-react-fastapi/backend/: pyproject.toml
templates/base-react-fastapi/backend/app/api/: main.py
templates/base-react-fastapi/frontend/src/: main.tsx
