[project]
name = "alloy-api"
version = "0.0.0"
description = "Alloy FastAPI gateway + Arq workers"
requires-python = ">=3.12,<4.0"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "gunicorn>=23.0.0,<24.0.0",

    # Data layer
    "sqlmodel>=0.0.22,<1.0.0",
    "psycopg[binary]>=3.2.3,<4.0.0",
    "alembic>=1.13.3,<2.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "greenlet>=3.1.0,<4.0.0",

    # Settings, logging, HTTP
    "pydantic>=2.9.2,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "httpx>=0.27.2,<1.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "structlog>=24.4.0,<25.0.0",

    # Auth (Clerk JWT verify via JWKS)
    "pyjwt[crypto]>=2.9.0,<3.0.0",

    # LLM clients + router
    "openai>=1.54.0,<2.0.0",
    "litellm>=1.51.0,<2.0.0",
    "azure-identity>=1.19.0,<2.0.0",

    # Agent framework + orchestration
    # Slim variant pulls only what we need (OpenAI provider); keeps image small.
    "pydantic-ai-slim[openai]>=1.0.0,<2.0.0",
    "langgraph>=1.0.0,<2.0.0",
    # Checkpointer lives in a separate package in langgraph 1.x. Needed
    # for the build-loop's "pause on human review, resume later" UX:
    # SqliteSaver persists state across process restarts so an in-flight
    # build can survive a worker redeploy.
    #
    # langgraph-checkpoint-sqlite 2.x calls `self.conn.is_alive()`, which
    # relied on aiosqlite.Connection inheriting from Thread — an API
    # aiosqlite dropped in 0.20+. 3.x switched to a version-agnostic
    # `_ensure_connected()` helper, so we pin >=3.0 to stay compatible
    # with the currently-released aiosqlite line.
    "langgraph-checkpoint-sqlite>=3.0.0,<4.0.0",
    "aiosqlite>=0.20.0,<1.0.0",

    # Scaffolder (Copier wraps Jinja + renders the base template)
    "copier>=9.4.0,<10.0.0",
    "pyyaml>=6.0.1,<7.0.0",

    # Jobs / queue
    "arq>=0.26.3,<1.0.0",
    "redis>=5.2.0,<6.0.0",

    # Rate-limit
    "slowapi>=0.1.9,<1.0.0",

    # Observability
    "sentry-sdk[fastapi]>=2.17.0,<3.0.0",
    "langfuse>=2.53.0,<3.0.0",

    # Shared schemas (local path dep)
    "alloy-shared",
]

[tool.uv.sources]
alloy-shared = { path = "../../packages/shared/python", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "httpx>=0.27.2,<1.0.0",
    "mypy>=1.13.0,<2.0.0",
    "ruff>=0.7.1,<1.0.0",
    "types-redis>=4.6.0,<5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG001", "SIM", "T201"]
ignore = ["E501", "B008"]

[tool.mypy]
strict = true
python_version = "3.12"
exclude = ["alembic", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["litellm.*", "arq.*", "slowapi.*", "langgraph.*", "copier.*", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
