[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "python-multipart<1.0.0,>=0.0.7",
    "email-validator<3.0.0.0,>=2.1.0.post1",
    "tenacity<9.0.0,>=8.2.3",
    "pydantic>2.0",
    "emails<1.0,>=0.6",
    "jinja2<4.0.0,>=3.1.4",
    "alembic<2.0.0,>=1.12.1",
    "httpx<1.0.0,>=0.25.1",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "sqlmodel<1.0.0,>=0.0.21",
    "pydantic-settings<3.0.0,>=2.2.1",
    "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
    "pyjwt<3.0.0,>=2.8.0",
    "pwdlib[argon2,bcrypt]>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "ty>=0.0.25",
    "ruff<1.0.0,>=0.2.2",
    "prek>=0.2.24,<1.0.0",
    "coverage<8.0.0,>=7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]
# Third-party deps in this template (pwdlib, argon2, bcrypt, emails, ...) ship
# without type stubs. Without this flag mypy --strict treats every untyped
# import as a hard error, which blocks the validator loop in the generator
# even though the code is fine. Block authors who *do* want strict checks for
# a specific dep can override with a `[[tool.mypy.overrides]]` entry.
ignore_missing_imports = true

# 13th-regression overrides — disable a small set of known-spurious
# diagnostics on TEMPLATE-OWNED files only. The agent should never be
# editing these files, so loosening type-checking here cannot mask a
# real bug introduced by the agent.
#
# (a) `app/core/security.py` (upstream full-stack-fastapi-template):
#     uses `from pwdlib import PasswordHash`. pwdlib publishes
#     `PasswordHash` at the top level via a runtime re-export mypy
#     cannot statically follow — it's defined in an internal module
#     and re-exported in `pwdlib/__init__.py` without an explicit
#     `from .X import Y` line. mypy emits `attr-defined`. Same shape
#     for `pwdlib.hashers.{argon2,bcrypt}` submodule imports.
#
# (b) `app/core/clerk.py` (auth/clerk block): calls
#     `jwt.decode(..., options=options)` where `options` is a plain
#     `dict[str, Any]`. pyjwt 2.10+'s stubs type the parameter as a
#     `jwt.api_jwt.Options` TypedDict, so mypy emits `arg-type`. The
#     code is correct at runtime — pyjwt accepts a plain dict — and
#     this is the integration shape Clerk's own docs publish.
#
# Per-file overrides target the specific template files; the agent's
# own edits in `app/api/`, `app/models.py`, `app/crud.py`, etc. still
# get full strict-mode treatment.
[[tool.mypy.overrides]]
module = ["app.core.security"]
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = ["app.core.clerk"]
disable_error_code = ["arg-type"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.ty.terminal]
error-on-warning = true
